facil.io/lib/facil/http/http.h


typedef struct http_settings_s http_settings_s;
typedef struct {
  struct {
    void *vtbl;
    uintptr_t flag;
    FIOBJ out_headers;
  } private_data;
  struct timespec received_at;
  FIOBJ method;
  FIOBJ status_str;
  FIOBJ version;
  uintptr_t status;
  FIOBJ path;
  FIOBJ query;
  FIOBJ headers;
  FIOBJ cookies;
  FIOBJ params;
  FIOBJ body;
  void *udata;
} http_s;
typedef struct {
  const char *name;
  const char *value;
  const char *domain;
  const char *path;
  size_t name_len;
  size_t value_len;
  size_t domain_len;
  size_t path_len;
  int max_age;
  unsigned secure : 1;
  unsigned http_only : 1;
  unsigned partitioned: 1;
} http_cookie_args_s;
int http_set_header(http_s *h, FIOBJ name, FIOBJ value);
int http_set_header2(http_s *h, fio_str_info_s name, fio_str_info_s value);
int http_set_cookie(http_s *h, http_cookie_args_s);
#define http_set_cookie(http___handle, ...)                                    \
  http_set_cookie((http___handle), (http_cookie_args_s){__VA_ARGS__})
int http_sendfile(http_s *h, int fd, uintptr_t length, uintptr_t offset);
int http_sendfile2(http_s *h, const char *prefix, size_t prefix_len,
                   const char *encoded, size_t encoded_len);
int http_send_error(http_s *h, size_t error_code);
void http_finish(http_s *h);
int http_push_data(http_s *h, void *data, uintptr_t length, FIOBJ mime_type);
int http_push_file(http_s *h, FIOBJ filename, FIOBJ mime_type);
typedef struct http_pause_handle_s http_pause_handle_s;
void http_pause(http_s *h, void (*task)(http_pause_handle_s *http));
void http_resume(http_pause_handle_s *http, void (*task)(http_s *h),
                 void (*fallback)(void *udata));
void *http_paused_udata_get(http_pause_handle_s *http);
void *http_paused_udata_set(http_pause_handle_s *http, void *udata);
struct http_settings_s {
  void (*on_request)(http_s *request);
  void (*on_upgrade)(http_s *request, char *requested_protocol, size_t len);
  void (*on_response)(http_s *response);
  void (*on_finish)(struct http_settings_s *settings);
  void *udata;
  const char *public_folder;
  size_t public_folder_length;
  size_t max_header_size;
  size_t max_body_size;
  intptr_t max_clients;
  void *tls;
  intptr_t reserved1;
  intptr_t reserved2;
  intptr_t reserved3;
  size_t ws_max_msg_size;
  uint8_t timeout;
  uint8_t ws_timeout;
  uint8_t log;
  uint8_t is_client;
};
intptr_t http_listen(const char *port, const char *binding,
                     struct http_settings_s);
#define http_listen(port, binding, ...)                                        \
  http_listen((port), (binding), (struct http_settings_s){__VA_ARGS__})
intptr_t http_connect(const char *url, const char *unix_address,
                      struct http_settings_s);
#define http_connect(url, unix_address, ...)                                   \
  http_connect((url), (unix_address), (struct http_settings_s){__VA_ARGS__})
struct http_settings_s *http_settings(http_s *h);
fio_str_info_s http_peer_addr(http_s *h);
intptr_t http_hijack(http_s *h, fio_str_info_s *leftover);
typedef struct ws_s ws_s;
typedef struct {
  void (*on_message)(ws_s *ws, fio_str_info_s msg, uint8_t is_text);
  void (*on_open)(ws_s *ws);
  void (*on_ready)(ws_s *ws);
  void (*on_shutdown)(ws_s *ws);
  void (*on_close)(intptr_t uuid, void *udata);
  void *udata;
} websocket_settings_s;
int http_upgrade2ws(http_s *http, websocket_settings_s);
#define http_upgrade2ws(http, ...)                                             \
  http_upgrade2ws((http), (websocket_settings_s){__VA_ARGS__})
int websocket_connect(const char *url, websocket_settings_s settings);
#define websocket_connect(url, ...)                                            \
  websocket_connect((url), (websocket_settings_s){__VA_ARGS__})
typedef struct http_sse_s http_sse_s;
struct http_sse_s {
  void (*on_open)(http_sse_s *sse);
  void (*on_ready)(http_sse_s *sse);
  void (*on_shutdown)(http_sse_s *sse);
  void (*on_close)(http_sse_s *sse);
  void *udata;
};
int http_upgrade2sse(http_s *h, http_sse_s);
#define http_upgrade2sse(h, ...)                                               \
  http_upgrade2sse((h), (http_sse_s){__VA_ARGS__})
void http_sse_set_timout(http_sse_s *sse, uint8_t timeout);
struct http_sse_subscribe_args {
  fio_str_info_s channel;
  void (*on_message)(http_sse_s *sse, fio_str_info_s channel,
                     fio_str_info_s msg, void *udata);
  void (*on_unsubscribe)(void *udata);
  void *udata;
  fio_match_fn match;
};
uintptr_t http_sse_subscribe(http_sse_s *sse,
                             struct http_sse_subscribe_args args);
#define http_sse_subscribe(sse, ...)                                           \
  http_sse_subscribe((sse), (struct http_sse_subscribe_args){__VA_ARGS__})
void http_sse_unsubscribe(http_sse_s *sse, uintptr_t subscription);
struct http_sse_write_args {
  fio_str_info_s id;    
  fio_str_info_s event; 
  fio_str_info_s data;  
  intptr_t retry;       
};
int http_sse_write(http_sse_s *sse, struct http_sse_write_args);
#define http_sse_write(sse, ...)                                               \
  http_sse_write((sse), (struct http_sse_write_args){__VA_ARGS__})
intptr_t http_sse2uuid(http_sse_s *sse);
int http_sse_close(http_sse_s *sse);
http_sse_s *http_sse_dup(http_sse_s *sse);
void http_sse_free(http_sse_s *sse);
int http_parse_body(http_s *h);
void http_parse_query(http_s *h);
void http_parse_cookies(http_s *h, uint8_t is_url_encoded);
int http_add2hash(FIOBJ dest, char *name, size_t name_len, char *value,
                  size_t value_len, uint8_t encoded);
int http_add2hash2(FIOBJ dest, char *name, size_t name_len, FIOBJ value,
                   uint8_t encoded);
fio_str_info_s http_status2str(uintptr_t status);
void http_mimetype_register(char *file_ext, size_t file_ext_len,
                            FIOBJ mime_type_str);
FIOBJ http_mimetype_find(char *file_ext, size_t file_ext_len);
FIOBJ http_mimetype_find2(FIOBJ url);
void http_mimetype_clear(void);
extern FIOBJ HTTP_HEADER_ACCEPT;
extern FIOBJ HTTP_HEADER_CACHE_CONTROL;
extern FIOBJ HTTP_HEADER_CONNECTION;
extern FIOBJ HTTP_HEADER_CONTENT_ENCODING;
extern FIOBJ HTTP_HEADER_CONTENT_LENGTH;
extern FIOBJ HTTP_HEADER_CONTENT_RANGE;
extern FIOBJ HTTP_HEADER_CONTENT_TYPE;
extern FIOBJ HTTP_HEADER_COOKIE;
extern FIOBJ HTTP_HEADER_DATE;
extern FIOBJ HTTP_HEADER_ETAG;
extern FIOBJ HTTP_HEADER_HOST;
extern FIOBJ HTTP_HEADER_LAST_MODIFIED;
extern FIOBJ HTTP_HEADER_ORIGIN;
extern FIOBJ HTTP_HEADER_SET_COOKIE;
extern FIOBJ HTTP_HEADER_UPGRADE;
FIOBJ http_req2str(http_s *h);
void http_write_log(http_s *h);
struct tm *http_gmtime(time_t timer, struct tm *tmbuf);
size_t http_date2rfc7231(char *target, struct tm *tmbuf);
size_t http_date2rfc2109(char *target, struct tm *tmbuf);
size_t http_date2rfc2822(char *target, struct tm *tmbuf);
static inline size_t http_date2str(char *target, struct tm *tmbuf) {
  return http_date2rfc7231(target, tmbuf);
}
size_t http_time2str(char *target, const time_t t);
ssize_t http_decode_url_unsafe(char *dest, const char *url_data);
ssize_t http_decode_url(char *dest, const char *url_data, size_t length);
ssize_t http_decode_path_unsafe(char *dest, const char *url_data);
ssize_t http_decode_path(char *dest, const char *url_data, size_t length);