facil.io/lib/facil/http/websockets.h


void websocket_attach(intptr_t uuid, http_settings_s *http_settings,
                      websocket_settings_s *args, void *data, size_t length);
void *websocket_udata_get(ws_s *ws);
void *websocket_udata_set(ws_s *ws, void *udata);
intptr_t websocket_uuid(ws_s *ws);
uint8_t websocket_is_client(ws_s *ws);
int websocket_write(ws_s *ws, fio_str_info_s msg, uint8_t is_text);
void websocket_close(ws_s *ws);
struct websocket_subscribe_s {
  ws_s *ws;
  fio_str_info_s channel;
  void (*on_message)(ws_s *ws, fio_str_info_s channel, fio_str_info_s msg,
                     void *udata);
  void (*on_unsubscribe)(void *udata);
  void *udata;
  fio_match_fn match;
  unsigned force_binary : 1;
  unsigned force_text : 1;
};
uintptr_t websocket_subscribe(struct websocket_subscribe_s args);
#define websocket_subscribe(wbsckt, ...)                                       \
  websocket_subscribe((struct websocket_subscribe_s){.ws = wbsckt, __VA_ARGS__})
void websocket_unsubscribe(ws_s *ws, uintptr_t subscription_id);
void websocket_optimize4broadcasts(intptr_t type, int enable);