facil.io/lib/facil/fio.h


typedef struct fio_str_info_s {
  size_t capa; 
  size_t len;  
  char *data;  
} fio_str_info_s;
typedef struct {
  fio_str_info_s scheme;
  fio_str_info_s user;
  fio_str_info_s password;
  fio_str_info_s host;
  fio_str_info_s port;
  fio_str_info_s path;
  fio_str_info_s query;
  fio_str_info_s target;
} fio_url_s;
void fio_uuid_link(intptr_t uuid, void *obj, void (*on_close)(void *obj));
int fio_defer(void (*task)(void *, void *), void *udata1, void *udata2);
int fio_run_every(size_t milliseconds, size_t repetitions, void (*task)(void *),
                  void *arg, void (*on_finish)(void *));
typedef enum {
  FIO_CALL_ON_INITIALIZE,
  FIO_CALL_PRE_START,
  FIO_CALL_BEFORE_FORK,
  FIO_CALL_AFTER_FORK,
  FIO_CALL_IN_CHILD,
  FIO_CALL_IN_MASTER,
  FIO_CALL_ON_START,
  FIO_CALL_ON_IDLE,
  FIO_CALL_ON_SHUTDOWN,
  FIO_CALL_ON_FINISH,
  FIO_CALL_ON_PARENT_CRUSH,
  FIO_CALL_ON_CHILD_CRUSH,
  FIO_CALL_AT_EXIT,
  FIO_CALL_NEVER
} callback_type_e;
void fio_state_callback_add(callback_type_e, void (*func)(void *), void *arg);
int fio_state_callback_remove(callback_type_e, void (*func)(void *), void *arg);
typedef int (*fio_match_fn)(fio_str_info_s pattern, fio_str_info_s channel);
typedef struct FIO_NAME(s) FIO_NAME(s);
FIO_FUNC inline size_t FIO_NAME(capa)(FIO_NAME(s) * ary);
FIO_FUNC inline size_t FIO_NAME(capa)(FIO_NAME(s) * ary) {
  return ary ? ary->capa : 0;
}
typedef struct {
  FIO_SET_KEY_TYPE key;
  FIO_SET_OBJ_TYPE obj;
} FIO_NAME(couplet_s);
typedef struct FIO_NAME(s) FIO_NAME(s);
FIO_FUNC inline size_t FIO_NAME(capa)(const FIO_NAME(s) * set);
FIO_FUNC inline size_t FIO_NAME(capa)(const FIO_NAME(s) * set) {
  return (size_t)set->capa;
}