src/fio.zig

pub extern const FIOBJECT_VTABLE_NUMBER: fiobj_object_vtable_s;
pub extern const FIOBJECT_VTABLE_FLOAT: fiobj_object_vtable_s;
pub extern const FIOBJECT_VTABLE_STRING: fiobj_object_vtable_s;
pub extern const FIOBJECT_VTABLE_ARRAY: fiobj_object_vtable_s;
pub extern const FIOBJECT_VTABLE_HASH: fiobj_object_vtable_s;
pub extern const FIOBJECT_VTABLE_DATA: fiobj_object_vtable_s;
pub fn fiobj_type_vtable(arg_o: FIOBJ) callconv(.C) [*c]const fiobj_object_vtable_s {
    var o = arg_o;
    while (true) {
        switch (@bitCast(c_int, @as(c_uint, fiobj_type(o)))) {
            @as(c_int, 1) => return &FIOBJECT_VTABLE_NUMBER,
            @as(c_int, 39) => return &FIOBJECT_VTABLE_FLOAT,
            @as(c_int, 40) => return &FIOBJECT_VTABLE_STRING,
            @as(c_int, 41) => return &FIOBJECT_VTABLE_ARRAY,
            @as(c_int, 42) => return &FIOBJECT_VTABLE_HASH,
            @as(c_int, 43) => return &FIOBJECT_VTABLE_DATA,
            @as(c_int, 6), @as(c_int, 22), @as(c_int, 38), @as(c_int, 44) => return null,
            else => {},
        }
        break;
    }
    return null;
}
pub extern fn fio_ltocstr(c_long) fio_str_info_s;
pub fn fiobj_obj2cstr(o: FIOBJ) callconv(.C) fio_str_info_s {
    if (!(o != 0)) {
        var ret: fio_str_info_s = fio_str_info_s{
            .capa = @bitCast(usize, @as(c_long, @as(c_int, 0))),
            .len = @bitCast(usize, @as(c_long, @as(c_int, 4))),
            .data = @intToPtr([*c]u8, @ptrToInt("null")),
        };
        return ret;
    }
    if ((o & @bitCast(c_ulong, @as(c_long, @as(c_int, 1)))) != 0) return fio_ltocstr(@bitCast(isize, o) >> @intCast(@import("std").math.Log2Int(isize), 1));
    if ((o & @bitCast(c_ulong, @as(c_long, @as(c_int, 6)))) == @bitCast(c_ulong, @as(c_long, @as(c_int, 6)))) {
        while (true) {
            switch (@bitCast(c_int, @as(c_uint, @bitCast(u8, @truncate(u8, o))))) {
                @as(c_int, 6) => {
                    {
                        var ret: fio_str_info_s = fio_str_info_s{
                            .capa = @bitCast(usize, @as(c_long, @as(c_int, 0))),
                            .len = @bitCast(usize, @as(c_long, @as(c_int, 4))),
                            .data = @intToPtr([*c]u8, @ptrToInt("null")),
                        };
                        return ret;
                    }
                },
                @as(c_int, 38) => {
                    {
                        var ret: fio_str_info_s = fio_str_info_s{
                            .capa = @bitCast(usize, @as(c_long, @as(c_int, 0))),
                            .len = @bitCast(usize, @as(c_long, @as(c_int, 5))),
                            .data = @intToPtr([*c]u8, @ptrToInt("false")),
                        };
                        return ret;
                    }
                },
                @as(c_int, 22) => {
                    {
                        var ret: fio_str_info_s = fio_str_info_s{
                            .capa = @bitCast(usize, @as(c_long, @as(c_int, 0))),
                            .len = @bitCast(usize, @as(c_long, @as(c_int, 4))),
                            .data = @intToPtr([*c]u8, @ptrToInt("true")),
                        };
                        return ret;
                    }
                },
                else => break,
            }
            break;
        }
    }
    return fiobj_type_vtable(o).*.to_str.?(o);
}
pub const http_cookie_args_s = opaque {};
pub extern fn http_set_header(h: [*c]http_s, name: FIOBJ, value: FIOBJ) c_int;
pub extern fn http_set_header2(h: [*c]http_s, name: fio_str_info_s, value: fio_str_info_s) c_int;
pub extern fn http_set_cookie(h: [*c]http_s, http_cookie_args_s) c_int;
pub extern fn http_sendfile(h: [*c]http_s, fd: c_int, length: usize, offset: usize) c_int;
pub extern fn http_sendfile2(h: [*c]http_s, prefix: [*c]const u8, prefix_len: usize, encoded: [*c]const u8, encoded_len: usize) c_int;
pub extern fn http_send_error(h: [*c]http_s, error_code: usize) c_int;
pub extern fn http_finish(h: [*c]http_s) void;
pub extern fn http_push_data(h: [*c]http_s, data: ?*anyopaque, length: usize, mime_type: FIOBJ) c_int;
pub extern fn http_push_file(h: [*c]http_s, filename: FIOBJ, mime_type: FIOBJ) c_int;
pub const struct_http_pause_handle_s = opaque {};
pub const http_pause_handle_s = struct_http_pause_handle_s;
pub extern fn http_pause(h: [*c]http_s, task: ?*const fn (?*http_pause_handle_s) callconv(.C) void) void;
pub extern fn http_resume(http: ?*http_pause_handle_s, task: ?*const fn ([*c]http_s) callconv(.C) void, fallback: ?*const fn (?*anyopaque) callconv(.C) void) void;
pub extern fn http_paused_udata_get(http: ?*http_pause_handle_s) ?*anyopaque;
pub extern fn http_paused_udata_set(http: ?*http_pause_handle_s, udata: ?*anyopaque) ?*anyopaque;
pub extern fn http_listen(port: [*c]const u8, binding: [*c]const u8, struct_http_settings_s) isize;
pub extern fn http_connect(url: [*c]const u8, unix_address: [*c]const u8, struct_http_settings_s) isize;
pub extern fn http_settings(h: [*c]http_s) [*c]struct_http_settings_s;
pub extern fn http_peer_addr(h: [*c]http_s) fio_str_info_s;
pub extern fn http_hijack(h: [*c]http_s, leftover: [*c]fio_str_info_s) isize;
pub const struct_ws_s = opaque {};
pub const ws_s = struct_ws_s;
pub const websocket_settings_s = extern struct {
    on_message: ?*const fn (?*ws_s, fio_str_info_s, u8) callconv(.C) void,
    on_open: ?*const fn (?*ws_s) callconv(.C) void,
    on_ready: ?*const fn (?*ws_s) callconv(.C) void,
    on_shutdown: ?*const fn (?*ws_s) callconv(.C) void,
    on_close: ?*const fn (isize, ?*anyopaque) callconv(.C) void,
    udata: ?*anyopaque,
};
pub extern fn http_upgrade2ws(http: [*c]http_s, websocket_settings_s) c_int;
pub extern fn websocket_connect(url: [*c]const u8, settings: websocket_settings_s) c_int;
pub extern fn websocket_attach(uuid: isize, http_settings: [*c]http_settings_s, args: [*c]websocket_settings_s, data: ?*anyopaque, length: usize) void;
pub extern fn websocket_udata_get(ws: ?*ws_s) ?*anyopaque;
pub extern fn websocket_udata_set(ws: ?*ws_s, udata: ?*anyopaque) ?*anyopaque;
pub extern fn websocket_uuid(ws: ?*ws_s) isize;
pub extern fn websocket_is_client(ws: ?*ws_s) u8;
pub extern fn websocket_write(ws: ?*ws_s, msg: fio_str_info_s, is_text: u8) c_int;
pub extern fn websocket_close(ws: ?*ws_s) void; // zig-cache/i/e0c8a6e617497ade13de512cbe191f23/include/websockets.h:104:12: warning: struct demoted to opaque type - has bitfield
pub const struct_websocket_subscribe_s = opaque {};
pub extern fn websocket_subscribe(args: struct_websocket_subscribe_s) usize;
pub extern fn websocket_unsubscribe(ws: ?*ws_s, subscription_id: usize) void;
pub extern fn websocket_optimize4broadcasts(@"type": isize, enable: c_int) void;
pub const http_sse_s = struct_http_sse_s;
pub const struct_http_sse_s = extern struct {
    on_open: ?*const fn ([*c]http_sse_s) callconv(.C) void,
    on_ready: ?*const fn ([*c]http_sse_s) callconv(.C) void,
    on_shutdown: ?*const fn ([*c]http_sse_s) callconv(.C) void,
    on_close: ?*const fn ([*c]http_sse_s) callconv(.C) void,
    udata: ?*anyopaque,
};
pub extern fn http_upgrade2sse(h: [*c]http_s, http_sse_s) c_int;
pub extern fn http_sse_set_timout(sse: [*c]http_sse_s, timeout: u8) void;
pub const fio_match_fn = ?*const fn (fio_str_info_s, fio_str_info_s) callconv(.C) c_int;
pub const struct_http_sse_subscribe_args = extern struct {
    channel: fio_str_info_s,
    on_message: ?*const fn ([*c]http_sse_s, fio_str_info_s, fio_str_info_s, ?*anyopaque) callconv(.C) void,
    on_unsubscribe: ?*const fn (?*anyopaque) callconv(.C) void,
    udata: ?*anyopaque,
    match: fio_match_fn,
};
pub extern fn http_sse_subscribe(sse: [*c]http_sse_s, args: struct_http_sse_subscribe_args) usize;
pub extern fn http_sse_unsubscribe(sse: [*c]http_sse_s, subscription: usize) void;
pub const struct_http_sse_write_args = extern struct {
    id: fio_str_info_s,
    event: fio_str_info_s,
    data: fio_str_info_s,
    retry: isize,
};
pub extern fn http_sse_write(sse: [*c]http_sse_s, struct_http_sse_write_args) c_int;
pub extern fn http_sse2uuid(sse: [*c]http_sse_s) isize;
pub extern fn http_sse_close(sse: [*c]http_sse_s) c_int;
pub extern fn http_sse_dup(sse: [*c]http_sse_s) [*c]http_sse_s;
pub extern fn http_sse_free(sse: [*c]http_sse_s) void;
pub extern fn http_parse_body(h: [*c]http_s) c_int;
pub extern fn http_parse_query(h: [*c]http_s) void;
pub extern fn http_parse_cookies(h: [*c]http_s, is_url_encoded: u8) void;
pub extern fn http_add2hash(dest: FIOBJ, name: [*c]u8, name_len: usize, value: [*c]u8, value_len: usize, encoded: u8) c_int;
pub extern fn http_add2hash2(dest: FIOBJ, name: [*c]u8, name_len: usize, value: FIOBJ, encoded: u8) c_int;
pub extern fn http_status2str(status: usize) fio_str_info_s;
pub extern fn http_mimetype_register(file_ext: [*c]u8, file_ext_len: usize, mime_type_str: FIOBJ) void;
pub extern fn http_mimetype_find(file_ext: [*c]u8, file_ext_len: usize) FIOBJ;
pub extern fn http_mimetype_find2(url: FIOBJ) FIOBJ;
pub extern fn http_mimetype_clear() void;
pub extern var HTTP_HEADER_ACCEPT: FIOBJ;
pub extern var HTTP_HEADER_CACHE_CONTROL: FIOBJ;
pub extern var HTTP_HEADER_CONNECTION: FIOBJ;
pub extern var HTTP_HEADER_CONTENT_ENCODING: FIOBJ;
pub extern var HTTP_HEADER_CONTENT_LENGTH: FIOBJ;
pub extern var HTTP_HEADER_CONTENT_RANGE: FIOBJ;
pub extern var HTTP_HEADER_CONTENT_TYPE: FIOBJ;
pub extern var HTTP_HEADER_COOKIE: FIOBJ;
pub extern var HTTP_HEADER_DATE: FIOBJ;
pub extern var HTTP_HEADER_ETAG: FIOBJ;
pub extern var HTTP_HEADER_HOST: FIOBJ;
pub extern var HTTP_HEADER_LAST_MODIFIED: FIOBJ;
pub extern var HTTP_HEADER_ORIGIN: FIOBJ;
pub extern var HTTP_HEADER_SET_COOKIE: FIOBJ;
pub extern var HTTP_HEADER_UPGRADE: FIOBJ;
pub extern fn http_req2str(h: [*c]http_s) FIOBJ;
pub extern fn http_write_log(h: [*c]http_s) void;
pub extern fn http_gmtime(timer: time_t, tmbuf: [*c]struct_tm) [*c]struct_tm;
pub extern fn http_date2rfc7231(target: [*c]u8, tmbuf: [*c]struct_tm) usize;
pub extern fn http_date2rfc2109(target: [*c]u8, tmbuf: [*c]struct_tm) usize;
pub extern fn http_date2rfc2822(target: [*c]u8, tmbuf: [*c]struct_tm) usize;
pub fn http_date2str(arg_target: [*c]u8, arg_tmbuf: [*c]struct_tm) callconv(.C) usize {
    var target = arg_target;
    var tmbuf = arg_tmbuf;
    return http_date2rfc7231(target, tmbuf);
}
pub extern fn http_time2str(target: [*c]u8, t: time_t) usize;
pub extern fn http_decode_url_unsafe(dest: [*c]u8, url_data: [*c]const u8) isize;
pub extern fn http_decode_url(dest: [*c]u8, url_data: [*c]const u8, length: usize) isize;
pub extern fn http_decode_path_unsafe(dest: [*c]u8, url_data: [*c]const u8) isize;
pub extern fn http_decode_path(dest: [*c]u8, url_data: [*c]const u8, length: usize) isize;
pub const http_url_s = fio_url_s;

pub const struct_tm = extern struct {
    tm_sec: c_int,
    tm_min: c_int,
    tm_hour: c_int,
    tm_mday: c_int,
    tm_mon: c_int,
    tm_year: c_int,
    tm_wday: c_int,
    tm_yday: c_int,
    tm_isdst: c_int,
    tm_gmtoff: c_long,
    tm_zone: [*c]const u8,
};
